--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "5.16.1",
+    "@types/node-cron": "^3.0.11",
+    "node-cron": "^3.0.3",
     "prisma": "^5.16.1",
     "telegraf": "^4.16.3"
   }
